--- a/src/styles/vacancies.css
+++ b/src/styles/vacancies.css
@@ -14,6 +14,7 @@
 
 .vacancies__filter {
   flex: 0 0 280px;
+  padding-bottom: 40px;
 }
 
 .vacancies__cards {
@@ -33,12 +34,15 @@
 
   .vacancies__container {
     flex-direction: column;
-    row-gap: 40px;
+    row-gap: 0;
   }
 
   .vacancies__filter-button {
     display: flex;
     align-items: center;
+    margin-bottom: 24px;
+    transition: margin-bottom 0.2s ease-in-out;
+    transition-delay: 0.2s;
   }
 
   .vacancies__filter-button:after {
@@ -47,6 +51,11 @@
     width: 20px;
     height: 20px;
     background: url("../images/arrow-blue.svg") no-repeat center;
+  }
+
+  .vacancies__filter-button_active {
+    margin-bottom: 32px;
+    transition-delay: 0s;
   }
 
   .vacancies__filter-button_active:after {
@@ -63,6 +72,7 @@
 
   .vacancies__filter_active {
     height: auto;
+    margin-bottom: 40px;
   }
 
   .vacancies__cards {
@@ -72,11 +82,8 @@
 
 
 @media (max-width: 640px) {
-  .vacancies__container{
-    gap: 24px;
-  }
 
-  .vacancies__cards{
-    padding-top: 8px;
+  .vacancies__filter-button_active {
+    margin-bottom: 24px;
   }
 }
