--- a/src/styles/choices.css
+++ b/src/styles/choices.css
@@ -2,14 +2,14 @@
   width: 100%;
 }
 
-.checkbox__inner {
+.choices__inner {
   background-color: #FFFFFF;
   padding: 6px 16px;
   min-height: 32px;
   border: 0;
 }
 
-.checkbox__list--single {
+.choices__list--single {
   padding: 0;
 }
 
@@ -18,7 +18,7 @@
   height: 20px;
   background: url("../images/arrow.svg") no-repeat center/contain;
   border: 0;
-  top: 12px;
+  top: 6px;
   right: 16px;
   margin-top: 0;
 }
