--- a/src/styles/filter.css
+++ b/src/styles/filter.css
@@ -13,7 +13,7 @@
 .filter__title {
   font-size: 20px;
   font-weight: 400;
-  margin-bottom: 3px;
+  margin-bottom: 32px;
 }
 
 .filter__form {
@@ -87,7 +87,7 @@
   .filter__checkboxes {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-    gap: 24px;
+    gap: 24px 70px;
     justify-content: space-between;
   }
 
