--- a/src/styles/file.css
+++ b/src/styles/file.css
@@ -12,6 +12,11 @@
   margin-bottom: 12px;
 }
 
+.file_active .file__wrap-preview {
+  background-color: transparent;
+  min-width: auto;
+}
+
 .file__wrap-preview:active {
   min-width: auto;
 }
